<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/option_refresh"
        android:icon="@drawable/ic_autorenew_white_24dp"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/option_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/refresh"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/option_alphabet"
                android:title="@string/alphabet"/>
            <item
                android:id="@+id/option_cheapest"
                android:title="@string/cheapest"/>
            <item
                android:id="@+id/option_most_expensive"
                android:title="@string/expensive"/>
        </menu>

    </item>
</menu>